--- a/css/style.css
+++ b/css/style.css
@@ -572,3 +572,6 @@
 .terms  .accordion-button{color:#000;}
 .terms .accordion-body{color:#000;}
 .terms strong{color:#000;}
+    .display-3 {
+        font-size: 2rem;
+    }
