--- a/css/style.css
+++ b/css/style.css
@@ -958,3 +958,75 @@
 
 
 
+
+.top-head {
+    margin-top: -95px;
+    background: #fff;
+    border: 2px solid #92bce7;
+    border-radius: 20px;
+    padding: 20px 20px 40px;
+    width: 100%;
+    float: left;
+}
+
+.top-head h2 {
+    color: #1b1b1b;
+    font-weight: 700;
+    font-size: 33px;
+    margin: 0 0 24px;
+}
+
+.top-head ul {
+    margin: 0;
+    padding: 0;
+}
+
+.top-head ul li {
+    list-style-type: none;
+    background: #f1f0f6;
+    width: 48%;
+    height: 73px;
+    margin-right: 2%;
+    margin-bottom: 2%;
+    float: left;
+    border-radius: 10px;
+    padding: 11px 11px;
+}
+
+.top-head ul li strong {
+    color: #000;
+    font-weight: 600;
+    font-size: 17px;
+    margin: 0 0 24px;
+}
+
+.top-head ul li p {
+    color: #000;
+    font-weight: 400;
+    font-size: 14px;
+    margin: 0 0 3px;
+}
+
+.top-head .total-price {
+    width: 100%;
+    float: left;
+    background: #ecfdf5;
+    border: 2px dashed #9ef1bc;
+    padding: 10px;
+    border-radius: 20px;
+    margin-top: 25px;
+}
+
+.top-head .total-price p {
+    color: #000;
+    font-weight: 400;
+    font-size: 15px;
+    margin: 0 0 0;
+}
+
+.top-head .total-price strong {
+    color: #000;
+    font-weight: 800;
+    font-size: 23px;
+    margin: 0 0 0;
+}
