--- a/partials/header.html
+++ b/partials/header.html
@@ -61,28 +61,70 @@
             <div class="navbar-nav ms-auto p-4 p-lg-0">
                 <a href="../index.html" class="nav-item nav-link active">Home</a>
                 <a href="../about.html" class="nav-item nav-link">About Us</a>
+                      <div class="nav-item dropdown">
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Treatments</a>
+                    <div class="dropdown-menu rounded-0 rounded-bottom m-0">
+                        <div class="treattopheder">
+                            <ul>
+                            <li>
+                                <a href="../cardiac-surgery.html" class="dropdown-item"><i class="fa fa-angle-right"></i> Cardiac Surgery</a>
+
+                            </li>
+                            <li>
+                                <a href="../orthopedic-surgery.html" class="dropdown-item"><i class="fa fa-angle-right"></i> Orthopedic Surgery</a>
+
+                            </li>
+                            <li>
+                                <a href="../ivf-fertility.html" class="dropdown-item"><i class="fa fa-angle-right"></i> IVF & Fertility</a>
+
+                            </li>
+                            <li>
+                                <a href="../cosmetic-surgery.html" class="dropdown-item"><i class="fa fa-angle-right"></i> Cosmetic Surgery </a>
+
+                            </li>
+                            <li>
+                                <a href="../knee-hipreplacement.html" class="dropdown-item"><i class="fa fa-angle-right"></i> Knee & Hip Replacement</a>
+
+                            </li>
+                            <li>
+                                <a href="../spine-surgery.html" class="dropdown-item"><i class="fa fa-angle-right"></i> Spine Surgery</a>
+
+                            </li>
+
+                            <li>
+                                <a href="../cancer-treatment.html" class="dropdown-item"><i class="fa fa-angle-right"></i> Cancer Treatment</a>
+
+                            </li>
+                            <li>
+                                <a href="../dental-implants.html" class="dropdown-item"><i class="fa fa-angle-right"></i> Dental Implants</a>
+
+                            </li>
+                            <li>
+                                <a href="../bariatric-surgery.html" class="dropdown-item"><i class="fa fa-angle-right"></i> Bariatric Surgery </a>
+
+                            </li>
+                            <li>
+                                <a href="../liver-kidney-transplant.html" class="dropdown-item"><i class="fa fa-angle-right"></i> Liver Kidney Transplant</a>
+
+                            </li>
+                        </ul>
+                        </div>
+                    </div>
+                </div>
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Services</a>
                     <div class="dropdown-menu rounded-0 rounded-bottom m-0">
-                        <a href="../air-ambulance-service.html" class="dropdown-item">Air Ambulance Service</a>
-                        <a href="../online-doctor-consultation.html" class="dropdown-item">Online Doctor Consultation</a>
-                        <a href="../accommodation-service.html" class="dropdown-item">Accommodation Service</a>
-                        <a href="../pre-post-arrival-services.html" class="dropdown-item">Pre Post Arrival Services</a>
-                        <a href="../flight-booking.html" class="dropdown-item">Flight Booking</a>
-                        <a href="../hotel-booking.html" class="dropdown-item">Hotel Booking</a>
+                        <a href="../air-ambulance-service.html" class="dropdown-item"><i class="fa fa-angle-right"></i> Air Ambulance Service</a>
+                        <a href="../online-doctor-consultation.html" class="dropdown-item"><i class="fa fa-angle-right"></i> Online Doctor
+                            Consultation</a>
+                        <a href="../accommodation-service.html" class="dropdown-item"><i class="fa fa-angle-right"></i> Accommodation Service</a>
+                        <a href="../pre-post-arrival-services.html" class="dropdown-item"><i class="fa fa-angle-right"></i> Pre Post Arrival Services</a>
+                        <a href="../flight-booking.html" class="dropdown-item"><i class="fa fa-angle-right"></i> Flight Booking</a>
+                        <a href="../hotel-booking.html" class="dropdown-item"><i class="fa fa-angle-right"></i> Hotel Booking</a>
 
                     </div>
                 </div>
-                <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Treatments</a>
-                    <div class="dropdown-menu rounded-0 rounded-bottom m-0">
-                        <a href="../cardiac-surgery.html" class="dropdown-item">Cardiac Surgery</a>
-                        <!-- <a href="team.html" class="dropdown-item">Our Doctor</a>
-                        <a href="appointment.html" class="dropdown-item">Appointment</a>
-                        <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                        <a href="404.html" class="dropdown-item">404 Page</a> -->
-                    </div>
-                </div>
+          
                 <a href="../contact.html" class="nav-item nav-link">Contact</a>
             </div>
             <div class="d-none d-lg-block call-top">
@@ -110,9 +152,9 @@
     <script src="../lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/19.2.15/js/intlTelInput.min.js"></script>
 
-        <!-- Template Javascript -->
+    <!-- Template Javascript -->
     <script src="js/main.js"></script>
 
-    </body>
+</body>
 
 </html>
