--- a/css/style.css
+++ b/css/style.css
@@ -1206,9 +1206,10 @@ h5.text-white {
     color: #fd1001;
 }
 
-/* .header-carousel.owl-carousel .owl-item img {
+.header-carousel.owl-carousel .owl-item img {
     height: 550px !important;
-} */
+    object-fit: cover;
+}
 
 .accordion {
     margin: 15px 0 15px;
