--- a/partials/header.html
+++ b/partials/header.html
@@ -107,6 +107,26 @@
                                 <a href="../liver-kidney-transplant.html" class="dropdown-item"><i class="fa fa-angle-right"></i> Liver Kidney Transplant</a>
 
                             </li>
+                             <li>
+                                <a href="../neuro-surgeries.html" class="dropdown-item"><i class="fa fa-angle-right"></i> Neuro Surgeries</a>
+
+                            </li>
+                             <li>
+                                <a href="../eye-surgery.html" class="dropdown-item"><i class="fa fa-angle-right"></i> Eye Surgery</a>
+
+                            </li>
+                             <li>
+                                <a href="../orthopedic-trauma-surgery.html" class="dropdown-item"><i class="fa fa-angle-right"></i> Orthopedic Trauma Surgery</a>
+
+                            </li>
+                             <li>
+                                <a href="../hair-transplant.html" class="dropdown-item"><i class="fa fa-angle-right"></i> Hair Transplant</a>
+
+                            </li>
+                              <li>
+                                <a href="../stem-cell-therapy.html" class="dropdown-item"><i class="fa fa-angle-right"></i> Stem Cell Therapy</a>
+
+                            </li>
                         </ul>
                         </div>
                     </div>
