--- a/partials/footer.html
+++ b/partials/footer.html
@@ -68,7 +68,11 @@
                     </h5>
                     <a class="btn btn-link size-txt-1" href="../service.html">Services</a>
                     <a class="btn btn-link size-txt-1" href="../medical-treatment.html">Medical Treatment Cost</a>
-                    <a class="btn btn-link size-txt-1" href="../refund-policy.html">Refund & Cancellation Policy</a>
+                    <a class="btn btn-link size-txt-1" href="../visa-assistance.html">Visa Assistance</a>
+                    <a class="btn btn-link size-txt-1" href="../disclaimer.html">Disclaimer</a>
+                    <a class="btn btn-link size-txt-1" href="../testimonial.html">Testimonial</a>
+                    <a class="btn btn-link size-txt-1" href="../faq.html">Frequently Asked Questions</a>
+
 
 
                 </div>
@@ -81,7 +85,8 @@
                     <a class="btn btn-link size-txt-1" href="../contact.html">Contact Us</a>
                     <a class="btn btn-link size-txt-1" href="../privacy-policy.html">Privacy Policy</a>
                     <a class="btn btn-link size-txt-1" href="../termsandconditions.html">Terms & Condition</a>
-
+                    <a class="btn btn-link size-txt-1" href="../refund-policy.html">Refund & Cancellation Policy</a>
+                    <a class="btn btn-link size-txt-1" href="../cookies-policy.html">Cookie Policy</a>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-light mb-4">Address <br>
@@ -95,14 +100,22 @@
                     <p class="mb-2 adgest size-txt-1"><i class="fa fa-phone-alt me-3"></i>+1-855-888-0114</p>
                     <p class="mb-2 adgest size-txt-1"><i class="fa fa-envelope me-3"></i>medical@adamvacations.com</p>
                     <div class="d-flex pt-2">
-                        <a class="btn btn-outline-light btn-social rounded-circle" href=""><i
-                                class="fab fa-twitter"></i></a>
-                        <a class="btn btn-outline-light btn-social rounded-circle" href=""><i
-                                class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-outline-light btn-social rounded-circle" href=""><i
-                                class="fab fa-youtube"></i></a>
-                        <a class="btn btn-outline-light btn-social rounded-circle" href=""><i
-                                class="fab fa-linkedin-in"></i></a>
+                        <div>
+                            <p>
+                                Follow us on
+                            </p>
+
+                        </div>
+                        <div style="margin-left:10px;">
+                            <a class="btn btn-outline-light btn-social rounded-circle"
+                                href="https://www.facebook.com/people/Adamvacation/100065127787909/"><i
+                                    class="fab fa-facebook-f"></i></a>
+                            <a class="btn btn-outline-light btn-social rounded-circle"
+                                href="https://www.instagram.com/adam.vacations/"><i class="fab fa-instagram"></i></a>
+                            <a class="btn btn-outline-light btn-social rounded-circle"
+                                href="https://in.linkedin.com/company/adam-vacations"><i
+                                    class="fab fa-linkedin-in"></i></a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -134,9 +147,9 @@
     <script src="../lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/19.2.15/js/intlTelInput.min.js"></script>
 
-        <!-- Template Javascript -->
+    <!-- Template Javascript -->
     <script src="js/main.js"></script>
 
-    </body>
+</body>
 
 </html>
