--- a/css/mobile-responsive.css
+++ b/css/mobile-responsive.css
@@ -247,4 +247,15 @@
     float: left;
 }
 .treattopheder ul li{width:100%;}
+.why-chose-head{height:auto;}
+.bg-primary-1 {
+    height: auto;
+    padding: 14px;
+}
+
+
+
+
+
+
 }
