--- a/css/mobile-responsive.css
+++ b/css/mobile-responsive.css
@@ -252,8 +252,12 @@
     height: auto;
     padding: 14px;
 }
-
-
+.testimonial-carousel .owl-item.center .testimonial-text p{font-size:14px;}
+.testimonial-carousel .owl-item.center .testimonial-text h5{font-size:18px;}
+.testimonial-carousel .owl-item.center .testimonial-text span{font-size:14px;}
+.display-3 {
+    font-size: 22px;
+}
 
 
 
