--- a/partials/footer.html
+++ b/partials/footer.html
@@ -47,7 +47,7 @@
 
 <body>
     <!-- Footer Start -->
-    <div class="container-fluid bg-dark text-light footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
+    <div class="container-fluid bg-dark text-light footer pt-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
@@ -67,14 +67,12 @@
                         <hr>
                     </h5>
                     <a class="btn btn-link size-txt-1" href="../service.html">Services</a>
+                    <a class="btn btn-link size-txt-1" href="../hospitals.html">Hospitals</a>
                     <a class="btn btn-link size-txt-1" href="../medical-treatment.html">Medical Treatment Cost</a>
                     <a class="btn btn-link size-txt-1" href="../visa-assistance.html">Visa Assistance</a>
                     <a class="btn btn-link size-txt-1" href="../disclaimer.html">Disclaimer</a>
                     <a class="btn btn-link size-txt-1" href="../testimonial.html">Testimonial</a>
-                    <a class="btn btn-link size-txt-1" href="../faq.html">Frequently Asked Questions</a>
-
-
-
+                    <a class="btn btn-link size-txt-1" href="../why-india.html">Why India</a>
                 </div>
 
                 <div class="col-lg-3 col-md-6">
@@ -87,6 +85,7 @@
                     <a class="btn btn-link size-txt-1" href="../termsandconditions.html">Terms & Condition</a>
                     <a class="btn btn-link size-txt-1" href="../refund-policy.html">Refund & Cancellation Policy</a>
                     <a class="btn btn-link size-txt-1" href="../cookies-policy.html">Cookie Policy</a>
+                    <a class="btn btn-link size-txt-1" href="../faq.html">Frequently Asked Questions</a>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-light mb-4">Address <br>
