--- a/css/style.css
+++ b/css/style.css
@@ -1255,7 +1255,7 @@ h5.text-white {
     background-size: cover;
 }
 .back-home{background:rgba(255,255,255,0.5); padding:20px;}
-
+.accordion-button{padding: 0.9rem 0.25rem;}
 
 
 
