--- a/css/style.css
+++ b/css/style.css
@@ -632,11 +632,13 @@
 
 .form-submit {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
 }
 
 .form-submit .sub-1 {
-    width: 45%;
+    width: fit-content;
+    
+
 }
 
 .form-submit .sub-1 button {
@@ -644,13 +646,14 @@
     width: 100%;
     color: #fff;
     font-size: 18px;
-    padding: 14px;
+    padding: 14px 40px;
     font-weight: 600;
     border-radius: 32px 0;
 }
 
 .form-submit .sub-2 {
-    width: 45%;
+    width: fit-content;
+    margin-right: 1rem;
 }
 
 .form-submit .sub-2 a {
@@ -1244,9 +1247,11 @@ h5.text-white {
 .treattopheder ul li a{font-size:14px;}
 .dropdown-item{font-size:14px;}
 
-
-
-
+button:disabled {
+    background-color: #ccc;   /* gray */
+    cursor: not-allowed;      /* disable pointer */
+    opacity: 0.7;             /* optional */
+}
 
 
 
