--- a/css/style.css
+++ b/css/style.css
@@ -633,11 +633,11 @@
 
 .form-submit {
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
 }
 
 .form-submit .sub-1 {
-    width: fit-content;
+    width: 45%;
     
 
 }
@@ -647,14 +647,13 @@
     width: 100%;
     color: #fff;
     font-size: 18px;
-    padding: 14px 40px;
+    padding: 14px;
     font-weight: 600;
     border-radius: 32px 0;
 }
 
 .form-submit .sub-2 {
-    width: fit-content;
-    margin-right: 1rem;
+    width: 45%;
 }
 
 .form-submit .sub-2 a {
